--- a/TESTE.html
+++ b/TESTE.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="TESTE.css">
     <title>Teste</title>
 </head>
-<body style="background-image: url('https://i.pinimg.com/736x/1f/f3/54/1ff354adb81d12d0cf22fb9fc5a46685.jpg'); background-repeat: no-repeat; background-size: 100% 100%">
+<body>
     <h1 style="text-align: center;">VTNC FLAMENGO</h1>
     <div style="text-align: center;">
-    <img src="https://i.pinimg.com/736x/1f/f3/54/1ff354adb81d12d0cf22fb9fc5a46685.jpg" alt="MAMAE">
+    <!-- <img src="https://i.pinimg.com/736x/1f/f3/54/1ff354adb81d12d0cf22fb9fc5a46685.jpg" alt="MAMAE"> -->
     </div>
 </body>
 </html>
